<resources>
    <string name="app_name">Price Comparison</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Price Comparison</string>
    <string name="nav_header_subtitle">Aplikacja do porównywania cen</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="api_url">http://localhost:8080/api</string>
    <string name="api_auth">authenticate</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj się</string>
    <string name="register">Załóż konto</string>
    <string name="login_bold"><b>Zaloguj się</b></string>
    <string name="register_bold"><b>Załóż konto</b></string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="confirm_password">Potwierdź hasło</string>
    <string name="email_error">Niepoprawny adres email</string>
    <string name="password_error">Hasło powinno zawierać co najmniej 6 znaków, w tym małą i dużą literę oraz cyfrę</string>
    <string name="password_error2">Hasła nie są identyczne</string>
    <string name="first_name_error">Imię powinno mieć 2–30 znaków, wyłącznie litery</string>
    <string name="last_name_error">Nazwisko powinno mieć 2–30 znaków, wyłącznie litery</string>
    <string name="username_error">Nazwa użytkownika powinna mieć 3–30 znaków</string>
    <string name="shopping_list_error">Nazwa powinna mieć 3–30 znaków</string>
    <string name="server_error">Błąd połączenia z serwerem</string>
    <string name="list">Lista</string>
    <string name="map">Mapa</string>
    <string name="send">Wyślij</string>
    <string name="sort">Sortuj</string>
    <string name="sort_rating">Najlepsza opinia </string>
    <string name="sort_price">Najlepsza cena</string>
    <string name="exit">Wyjdź</string>
    <string name="choose_store">Wybierz sklep</string>
    <string name="choose">Wybierz</string>
    <string name="choose_product">Wybierz produkt</string>
    <string name="add_poster">Dodaj ogłoszenie</string>
    <string name="next">Dalej</string>
    <string name="back">Cofnij</string>
    <string name="confirm">Potwierdź</string>
    <string name="summary">Podsumowanie</string>
    <string name="store">Sklep:</string>
    <string name="price">Cena:</string>
    <string name="address">Adres:</string>
    <string name="rating">Opinia</string>
    <string name="menu_list">Szukaj ogłoszenia</string>
    <string name="menu_add">Dodaj ogłoszenie</string>
    <string name="menu_promotions">Promocje</string>
    <string name="menu_shopping">Listy zakupów</string>
    <string name="menu_profile">Edytuj profil</string>
    <string name="logout">Wyloguj</string>
    <string name="product">Produkt:</string>
    <string name="sum">Suma: </string>
    <string name="poster_added">Ogłoszenie dodane pomyślnie</string>
    <string name="poster_exist">Takie ogłoszenie już istnieje</string>
    <string name="incorrect_data">Login lub hasło jest niepoprawne</string>
    <string name="logout_question">Czy chcesz wyjść z aplikacji?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="expand">pokaż</string>
    <string name="collapse">ukryj</string>
    <string name="add_shoppinglist">Dodaj listę zakupów</string>
    <string name="add">Dodaj</string>
    <string name="shopping_list_added">Pomyślnie stworzono listę</string>
    <string name="wrong_store_name">Niepoprawna nazwa sklepu</string>
    <string name="shopping_list_exists">Posiadasz już listę zakupów o takiej nazwie</string>
    <string name="no_shopping_list">Nie stworzyłeś jeszcze żadnej listy zakupów</string>
    <string name="added_to_shopping_list">Dodano do listy zakupów</string>
    <string name="title_activity_promotion">PromotionActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
