<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/summary"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/blue_border"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_h15"
       >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/product_value"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toEndOf="@+id/price" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/price_value"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toEndOf="@+id/price" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/store_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/store"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />

            <TextView
                android:id="@+id/store_name_value"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/store_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/address"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/store_address_value"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:text="ul. "
                app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/green_bg"
        android:text="@string/back"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirm_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3"
        android:layout_marginTop="16dp"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/green_bg"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3"
        android:layout_marginTop="16dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>