<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dp"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintWidth_percent="0.85"
        />

    <LinearLayout

        android:id="@+id/button_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yes_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/yes"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/fragment_container"
            app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintWidth_default="percent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/no_btn"
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/no"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/fragment_container"
            app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintWidth_default="percent"
            android:layout_marginRight="10dp"

            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>